--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,17 @@
 general:
   kafka-topic: my-kafka-topic
 
+spring:
+  kafka:
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.value.default.type: com.jpmc.midascore.foundation.Transaction
+
+
+
+
